[package]
name = "braille-spectrum-rs"
version = "0.1.0"
authors = ["Speykious <speykious@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.0"
minimp3 = "0.5.0"
mp3-metadata = "0.3.3"
anyhow = "1.0.34"
ringbuf = "0.2.2"
termion = "1.5.5"